# cuda_llm_ops

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
BitonicSort/: bitonicsort.cu
DSALightningIndexer/: dsalightningindexer_triton.py
ElementwiseAdd/: elementwiseadd.cu  elementwiseadd_triton.py
Engram/: engramHash.cpp  engramHash.h  golden.cpp
FlashAttention/: infer_flash_gqa.cu
FlashGQA/: infer_flash_gqa.cu  infer_flash_gqa_triton.py
FlashLinearAttention/Mamba2/: ssd_minimal.py  ssd_triton.py
GEMM/: gemm_fp16.cu  gemm_fp16_triton.py  gemm_fp8_triton.py
GLU/: glu_bf16.cu
LayerNorm/: layernorm.cu  layernorm_backward.cu
LinearAttention/GatedDeltaNet/: gdn.py  gdn_kernels.py
LinearAttention/Mamba2/: ssd_triton.py
RMSNorm/: rmsnorm.cu  rmsnorm_backward.cu
ReduceSum/: reducesum.cu  reducesum_triton.py
RoPE/: rope.cu
Softmax/: softmax.cu  softmaxBackward.cu  softmaxCrossEntropy.cu  softmaxCrossEntropyBackward.cu
Sort/: bitonicsort.cu  radixsort.cu
TopK/: topk.cu
examples/cplusplus/: test_bitonicsort.cu  test_decode_flash_gqa.cu  test_elementwiseadd.cu  test_engram_hash.cpp  test_flash_gqa.cu  test_gemm_fp16.cu  test_glu_bf16.cu  test_layernorm.cu  test_layernorm_backward.cu  test_mhc_sinkhorn.cu  test_mhc_sinkhorn_backward.cu  test_radixsort.cu  test_reducesum.cu  test_rmsnorm.cu  test_rmsnorm_backward.cu  test_rope.cu  test_softmax.cu  test_softmax_backward.cu  test_softmax_cross_entropy.cu  test_softmax_cross_entropy_backward.cu  test_topk.cu
examples/python/: test_decode_flash_gqa_triton_kernel.py  test_elementwiseadd_triton_kernel.py  test_flash_gqa_triton_kernel.py  test_flash_mla_triton_kernel.py  test_flash_sgqa_triton_kernel.py  test_flash_swa_triton_kernel.py  test_gdn_triton_kernel.py  test_gemm_fp16_triton_kernel.py  test_gemm_fp8_triton_kernel.py  test_infer_flash_gqa_triton_kernel.py  test_reducesum_triton_kernel.py  test_ssd_triton_kernel.py
examples/python/Triton/: test_decode_flash_gqa_kernel.py  test_elementwiseadd_kernel.py  test_flash_gqa_kernel.py  test_flash_mla_kernel.py  test_flash_sgqa_kernel.py  test_flash_swa_kernel.py  test_gdn_kernel.py  test_gemm_fp16_kernel.py  test_gemm_fp8_kernel.py  test_reducesum_kernel.py  test_ssd_kernel.py
include/cplusplus/: cuda_llm_ops.h
include/cplusplus/ElementwiseAdd/: elementwiseadd_kernel.cuh
include/cplusplus/EngramHash/: engram_hash_kernel.h
include/cplusplus/FlashGQA/: decode_flash_gqa_kernel.cuh  flash_gqa_kernel.cuh
include/cplusplus/GEMM/: gemm_fp16_kernel.cuh
include/cplusplus/GLU/: glu_bf16_kernel.cuh
include/cplusplus/LayerNorm/: layernorm_backward_kernel.cuh  layernorm_kernel.cuh
include/cplusplus/RMSNorm/: rmsnorm_backward_kernel.cuh  rmsnorm_kernel.cuh
include/cplusplus/ReduceSum/: reducesum_kernel.cuh
include/cplusplus/RoPE/: rope_kernel.cuh
include/cplusplus/Softmax/: softmax_backward_kernel.cuh  softmax_cross_entropy_backward_kernel.cuh  softmax_cross_entropy_kernel.cuh  softmax_kernel.cuh
include/cplusplus/Sort/: bitonicsort_kernel.cuh  radixsort_kernel.cuh
include/cplusplus/TopK/: topk_kernel.cuh
include/cplusplus/Utils/: utils.cuh
include/cplusplus/mHCSinkhorn/: mhc_sinkhorn_backward_kernel.cuh  mhc_sinkhorn_kernel.cuh
mHC/: sinkhorn.cu  sinkhorn.cuh  sinkhornBackward.cu  sinkhornBackward.cuh  sinkhornBackwardGolden.cu  sinkhornGolden.cu
src/cplusplus/ElementwiseAdd/: elementwiseadd_kernel.cu
src/cplusplus/EngramHash/: engram_hash_kernel.cpp
src/cplusplus/FlashGQA/: decode_flash_gqa_kernel.cu  flash_gqa_kernel.cu
src/cplusplus/GEMM/: gemm_fp16_kernel.cu
src/cplusplus/GLU/: glu_bf16_kernel.cu
src/python/: decode_flash_gqa_triton_kernel.py  flash_gqa_triton_kernel.py  flash_mla_triton_kernel.py  gdn_triton_kernel.py  infer_flash_gqa_triton_kernel.py  reducesum_triton_kernel.py  ssd_triton_kernel.py
(+26 files in other folders)
